# photo-db

./: README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  api.py  requirements.txt
db/: Dockerfile  create_db.py  init.sql
frontend/public/img/: db_header.jfif
frontend/src/: App.svelte
frontend/src/components/: AccountList.svelte  CreateAccount.svelte  Footer.svelte  Header.svelte  PhotoList.svelte  UploadPhoto.svelte
frontend/src/shared/: Tabs.svelte
